--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -1585,9 +1585,9 @@
 }
 
 @Article{GMW91,
-    Title       =   {Proofs that Yield Nothing But Their Validity for All Languages in {NP} Have Zero-Knowledge Proof Systems},
+    Title       =   {Proofs that Yield Nothing But Their Validity or All Languages in {NP} Have Zero-Knowledge Proof Systems},
     Author      =   {Oded Goldreich and Silvio Micali and Avi Wigderson},
-    Journal     =   {Journal of the ACM},
+    Journal     =   jacm,
     Year        =   {1991},
     Number      =   {3},
     Pages       =   {690--728},
@@ -5069,16 +5069,6 @@
 }
 % 20190903-slord: The CRYPTO 1986 proceedings were published in 1987.
 
-@InProceedings{LZ19,
-    Title       =   {Revisiting Post-quantum {F}iat-{S}hamir},
-    Author      =   {Liu, Qipeng and Zhandry, Mark},
-    Year        =   {2019},
-    Booktitle   =   crypto2019,
-    Volume      =   {II},
-    Pages       =   {326--355},
-    DOI         =   {10.1007/978-3-030-26951-7\_12},
-}
-
 @InProceedings{Ji17,
     Title       =   {Compression of quantum multi-prover interactive proofs},
     Author      =   {Ji, Zhengfeng},
@@ -5186,7 +5176,7 @@
 
 @Article{PLWC16,
     Title       =   {Sifting attacks in finite-size quantum key distribution},
-    Author      =   {Pfister, Corsin and Lütkenhaus, Norbert and Wehner, Stephanie and Coles, Patrick J.},
+    Author      =   {Pfister, Corsin and L\"{u}tkenhaus, Norbert and Wehner, Stephanie and Coles, Patrick J.},
     Year        =   {2016},
     Journal     =   njp,
     Volume      =   {18},
@@ -5227,7 +5217,7 @@
 
 @Article{WC81,
     Title       =   {New hash functions and their use in authentication and set equality},
-    Author      =   {Mark N. Wegman, Mark N. and Carter, J.Lawrence},
+    Author      =   {Wegman, Mark N. and Carter, J.Lawrence},
     Year        =   {1981},
     Journal     =   jcss,
     Volume      =   {22},
@@ -5253,7 +5243,7 @@
 }
 
 @Article{KRS09,
-    Title       =   {The operational meaning of min-and max-entropy},
+    Title       =   {The operational meaning of min- and max-entropy},
     Author      =   {K{\"o}nig, Robert and Renner, Renato and Schaffner, Christian},
     Year        =   {2009},
     Journal     =   ieeetit,
@@ -5299,3 +5289,483 @@
     Eprint      =   {arXiv:1810.05226},
     Note        =   {Available at \url{https://arxiv.org/abs/1810.05226}.},
 }
+
+@InProceedings{AR03,
+    Title       =   {A Lattice Problem in Quantum {NP}},
+    Author      =   {Aharonov, Dorit and Regev, Oded},
+    Year        =   {2003},
+    Booktitle   =   focs03,
+    Pages       =   {210--219},
+    DOI         =   {10.1109/SFCS.2003.1238195},
+}
+
+@Article{Pit91,
+    Title       =   {Correlation polytopes: their geometry and complexity},
+    Author      =   {Pitowsky, Itamar},
+    Year        =   {1991},
+    Journal     =   {Mathematical Programming},
+    Volume      =   {50},
+    Number      =   {1--3},
+    Pages       =   {395--414},
+    DOI         =   {10.1007/BF01594946},
+}
+
+@InProceedings{Gri19,
+    Title       =   {A Simple Protocol for Verifiable Delegation of Quantum Computation in One Round},
+    Author      =   {Grilo, Alex B.},
+    Year        =   {2019},
+    Booktitle   =   icalp2019,
+    Pages       =   {28},
+    DOI         =   {10.4230/LIPIcs.ICALP.2019.28},
+}
+
+@Misc{DK18,
+    Title       =   {Proofs of Ignorance and Applications to 2-Message Witness Hiding},
+    Author      =   {Deshpande, Apoorvaa and Kalai, Yael},
+    Year        =   {2018},
+    EPrint      =   {IACR:2018/896},
+    Note        =   {Available at \url{https://eprint.iacr.org/2018/896}.},
+}
+
+@inproceedings{Liu06,
+    Title       =   {Consistency of Local Density Matrices Is {QMA}-Complete},
+    Author      =   {Liu, Yi{-}Kai},
+	Year        =   {2006},
+    Booktitle   =   {9th International Workshop on Approximation Algorithms for Combinatorial Optimization Problems---{APPROX} 2006 and 10th International Workshop on Randomization and Computation---{RANDOM} 2006},
+    Pages       =   {438--449},
+    DOI         =   {10.1007/11830924\_40},
+}
+
+@Article{Wer98,
+    Title       =   {Optimal cloning of pure states},
+    Author      =   {Werner, R. F.},
+    Year        =   {1998},
+    Journal     =   phyra,
+    Volume      =   {58},
+    Number      =   {3},
+    Pages       =   {1827},
+    DOI         =   {10.1103/PhysRevA.58.1827},
+}
+
+@Misc{BI19arxiv,
+    Title       =   {Quantum Encryption with Certified Deletion},
+    Author      =   {Broadbent, Anne and Islam, Rabib},
+    Year        =   {2019},
+    Eprint      =   {arXiv:1910.03551},
+    Note        =   {Available at \url{https://arxiv.org/abs/1910.03551}.},
+}
+
+@Article{BDE+98,
+    Title       =   {Optimal universal and state-dependent quantum cloning},
+    Author      =   {Bru{\ss}, Dagmar and DiVincenzo, David P and Ekert, Artur and Fuchs, Christopher A and Macchiavello, Chiara and Smolin, John A},
+    Year        =   {1998}, 
+    Journal     =   phyra,
+    Volume      =   {57},
+    Number      =   {4},
+    Pages       =   {2368},
+    DOI         =   {10.1103/PhysRevA.57.2368},
+}
+
+@Article{FH18,
+    Title       =   {Approximate randomized benchmarking for finite groups},
+    Author      =   {Fran{\c{c}}a, Daniel Stilck and Hashagen, AK},
+    Year        =   {2018},
+    Journal     =   jphysa,
+    Volume      =   {51},
+    Number      =   {39},
+    Pages       =   {395302},
+    DOI         =   {10.1088/1751-8121/aad6fa},
+}
+
+@Article{MW05,
+    Title       =   {Quantum {A}rthur--{M}erlin games},
+    Author      =   {Marriott, Chris and Watrous, John},
+    Year        =   {2005},
+    Journal     =   cc,
+    Volume      =   {14},
+    Number      =   {2},
+    Pages       =   {122--152},
+    DOI         =   {10.1007/s00037-005-0194-x},
+}
+
+@Article{KR03,
+    Title       =   {$3$-local {H}amiltonian is {QMA}-complete},
+    Author      =   {Kempe, Julia and Regev, Oded},
+    Year        =   {2003},
+    Journal     =   qic,
+    Volume      =   {3},
+    Number      =   {3},
+    Pages       =   {258--264},
+}
+% 20191028-slord: qic does not give a url or doi to individual articles.
+
+@Article{KKR06,
+    Title       =   {The complexity of the local {H}amiltonian problem},
+    Author      =   {Kempe, Julia and Kitaev, Alexei and Regev, Oded},
+    Year        =   {2006},
+    Journal     =   siamjc,
+    Volume      =   {35},
+    Number      =   {5},
+    Pages       =   {1070--1097},
+    DOI         =   {10.1137/S0097539704445226},
+}
+
+@Inproceedings{KW00,
+    Title       =   {Parallelization, amplification, and exponential time simulation of quantum interactive proof systems},
+    Author      =   {Kitaev, Alexei and Watrous, John},
+    Year        =   {2000},
+    Booktitle   =   stoc00,
+    Pages       =   {608--617},
+    DOI         =   {10.1145/335305.335387},
+}
+
+
+@Article{FHM18,
+    Title       =   {Post hoc verification of quantum computation},
+    Author      =   {Fitzsimons, Joseph F. and Hajdu{\v{s}}ek, Michal and Morimae, Tomoyuki},
+    Year        =   {2018},
+    Journal     =   phyrevl,
+    Volume      =   {120},
+    Number      =   {4},
+    Pages       =   {040501},
+    DOI         =   {PhysRevLett.120.040501},
+}
+
+@Misc{Boo12arxiv,
+    Title       =   {{QMA}-complete problems},
+    Author      =   {Booktatz, Adam D.},
+    Year        =   {2012},
+    Note        =   {Available at \url{https://arxiv.org/abs/1212.6312}.},
+}
+
+@Article{Boo14,
+    Title       =   {{QMA}-complete problems},
+    Author      =   {Bookatz, Adam D},
+    Year        =   {2014},
+    Journal     =   qic,
+    Volume      =   {14},
+    Number      =   {5\&6},
+    Pages       =   {361--383},
+}
+% 20191028-slord: qic does not give a url or doi to individual articles.
+
+@Article{LCV07,
+    Title       =   {Quantum computational complexity of the ${N}$-representability problem: {QMA} complete},
+    Author      =   {Liu, Yi-Kai and Christandl, Matthias and Verstraete, Frank},
+    Year        =   {2007},
+    Journal     =   phyrevl,
+    Volume      =   {98},
+    Number      =   {11},
+    Pages       =   {110503},
+    DOI         =   {10.1103/PhysRevLett.98.110503}
+}
+
+@Article{WMN10,
+    Title       =   {Interacting boson problems can be {QMA} hard},
+    Author      =   {Wei, Tzu-Chieh and Mosca, Michele and Nayak, Ashwin},
+    Year        =   {2010},
+    Journal     =   phyrevl,
+    Volume      =   {104},
+    Number      =   {4},
+    Pages       =   {040501},
+    DOI         =   {10.1103/PhysRevLett.104.040501},
+}
+
+@Article{SV09,
+    Title       =   {Computational complexity of interacting electrons and fundamental limitations of density functional theory},
+    Author      =   {Schuch, Norbert and Verstraete, Frank},
+    Year        =   {2009},
+    Journal     =   natphys,
+    Volume      =   {5},
+    Number      =   {10},
+    Pages       =   {732},
+    DOI         =   {doi.org/10.1038/nphys1370}
+}
+
+@Article{CK07arxiv,
+    Title       =   {Increasing the power of the verifier in Quantum Zero Knowledge},
+    Author      =   {Chailloux, Andr{\'e} and Kerenidis, Iordanis},
+    Year        =   {2007},
+    Note        =   {Available at \url{https://arxiv.org/abs/0711.4032}.},
+}
+
+@Article{GO94,
+    Title       =   {Definitions and properties of zero-knowledge proof systems},
+    Author      =   {Goldreich, Oded and Oren, Yair},
+    Year        =   {1994},
+    Journal     =   jcryp,
+    Volume      =   {7},
+    Number      =   {1},
+    Pages       =   {1--32},
+    DOI         =   {10.1007/BF00195207},
+}
+
+@Article{Aar09b,
+    Title       =   {On perfect completeness for {QMA}},
+    Author      =   {Aaronson, Scott},
+    Year        =   {2009},
+    Journal     =   qic,
+    Volume      =   {9},
+    Number      =   {1}, 
+    Pages       =   {81--89},
+}
+% 20191028-slord: qic does not give a url or doi to individual articles.
+
+@Article{HNN13,
+    Title       =   {The local {H}amiltonian problem on a line with eight states is {QMA}-complete},
+    Author      =   {Hallgren, Sean and Nagaj, Daniel and Narayanaswami, Sandeep},
+    Year        =   {2013},
+    Journal     =   qic,
+    Volume      =   {13},
+    Number      =   {9\&10},
+    Pages       =   {721--750},
+}
+% 20191028-slord: qic does not give a url or doi to individual articles.
+
+@Article{OT08,
+    Title       =   {The complexity of quantum spin systems on a two-dimensional square lattice},
+    Author      =   {Oliveira, Roberto and Terhal, Barbara M},
+    Year        =   {2008},
+    Journal     =   qic,
+    Volume      =   {8},
+    Number      =   {10},
+    Pages       =   {900--924},
+}
+% 20191028-slord: qic does not give a url or doi to individual articles.
+
+@Article{BC18,
+    Title       =   {Analysis and limitations of modified circuit-to-{H}amiltonian constructions},
+    Author      =   {Bausch, Johannes and Crosson, Elizabeth},
+    Year        =   {2018},
+    Journal     =   q,
+    Volume      =   {2},
+    Pages       =   {94},
+    DOI         =   {10.22331/q-2018-09-19-94},
+}
+
+@Inproceedings{NV18,
+    Title       =   {Low-degree testing for quantum states, and a quantum entangled games {PCP} for {QMA}},
+    Author      =   {Natarajan, Anand and Vidick, Thomas},
+    Year        =   {2018},
+    Booktitle   =   focs18,
+    Pages       =   {731--742},
+    DOI         =   {10.1109/FOCS.2018.00075},
+}
+
+@Inproceedings{BOGG88,
+    Title       =   {Everything provable is provable in zero-knowledge},
+    Author      =   {Ben-Or, Michael and Goldreich, Oded and Goldwasser, Shafi and H{\aa}stad, Johan and Kilian, Joe and Micali, Silvio and Rogaway, Phillip},
+    Year        =   {1988},
+    Booktitle   =   crypto1988,
+    Pages       =   {37--56},
+    DOI         =   {10.1007/0-387-34799-2\_4},
+}
+
+@Inproceedings{Cha83,
+    Title       =   {Blind signatures for untraceable payments},
+    Author      =   {Chaum, David},
+    Year        =   {1983},
+    Booktitle   =   crypto1983,
+    Pages       =   {199--203},
+    DOI         =   {10.1007/978-1-4757-0602-4\_18},
+}
+
+@Article{BOG03,
+    Title       =   {Trading Help for Interaction in Statistical Zero-Knowledge Proofs},
+    Author      =   {Ben-Or, Michael and Gutfreund, Dan},
+    Year        =   {2003},
+    Journal     =   jcrypt,
+    Volume      =   {16},
+    Number      =   {2},
+    Pages       =   {95--116},
+    DOI         =   {10.1007/s00145-002-0113-0},
+}
+
+@Inproceedings{CCKV08,
+    Title       =   {Interactive and noninteractive zero knowledge are equivalent in the help model},
+    Author      =   {Chailloux, Andr{\'e} and Ciocan, Dragos Florin and Kerenidis, Iordanis and Vadhan, Salil},
+    Year        =   {2008},
+    Booktitle   =   tcc2008,
+    Pages       =   {501--534},
+    DOI         =   {10.1007/978-3-540-78524-8\_28},
+}
+
+@Misc{Cha19iacr,
+    Title       =   {Quantum security of the {F}iat-{S}hamir transform of commit and open protocols},
+    Author      =   {Chailloux, Andr{\'e}},
+    Year        =   {2019},
+    Note        =   {Available at \url{https://eprint.iacr.org/2019/699}.},
+}
+
+@Book{GJ90,
+    Title       =   {Computers and Intractability; A Guide to the Theory of {NP}-Completeness},
+    Author      =   {Garey, Michael R. and Johnson, David S.},
+    Year        =   {1990},
+    ISBN        =   {0716710455},
+    Publisher   =   {W. H. Freeman \& Co.},
+}
+
+@Inproceedings{LZ19,
+    Title       =   {Revisiting Post-quantum {F}iat-{S}hamir},
+    Author      =   {Liu, Qipeng and Zhandry, Mark},
+    Year        =   {2019},
+    Booktitle   =   crypto2019,
+    Volume      =   {II},
+    Pages       =   {326--355},
+    DOI         =   {10.1007/978-3-030-26951-7\_12},
+}
+
+@Inproceedings{DFMS19,
+    Title       =   {Security of the {F}iat-{S}hamir Transformation in the Quantum Random-Oracle Model},
+    Author      =   {Don, Jelle and Fehr, Serge and Majenz, Christian Majenz and Schaffner, Christian},
+    Year        =   {2019},
+    Booktitle   =   crypto2019,
+    Volume      =   {II},
+    Pages       =   {356--383},
+    DOI         =   {10.1007/978-3-030-26951-7\_13},
+}
+
+@Inproceedings{FK18,
+    Title       =   {Quantum vs.~Classical Proofs and Subset Verification},
+    Author      =   {Fefferman, Bill and Kimmel, Shelby},
+    Year        =   {2018},
+    Booktitle   =   mfcs2018,
+    Pages       =   {22},
+    DOI         =   {10.4230/LIPIcs.MFCS.2018.22},
+}
+
+@inproceedings{BSCG+14,
+    Title       =   {Zerocash: Decentralized anonymous payments from {B}itcoin},
+    Author      =   {Ben-Sasson, Eli and Chiesa, Alessandro and Garman, Christina and Green, Matthew and Miers, Ian and Tromer, Eran and Virza, Madars},
+    Year        =   {2014},
+    Booktitle   =   ieeesecpriv2014,
+    Pages       =   {459--474},
+    DOI         =   {10.1109/SP.2014.36},
+}
+
+@Inproceedings{Kar72,
+    Title       =   {Reducibility among combinatorial problems},
+    Author      =   {Karp, Richard M.},
+    Year        =   {1972}, 
+    Booktitle   =   {Complexity of Computer Computations},
+    Pages       =   {85--103},
+    DOI         =   {10.1007/978-1-4684-2001-2\_9},
+}
+
+@Inproceedings{BFM88,
+    Title       =   {Non-interactive zero-knowledge and its applications},
+    Author      =   {Blum, Manuel and Feldman, Paul and Micali, Silvio},
+    Year        =   {1988},
+    Booktitle   =   stoc88,
+    Pages       =   {103--112},
+    DOI         =   {10.1145/62212.62222},
+}
+
+@Inproceedings{CGJV19,
+    Title       =   {Verifier-on-a-Leash: New Schemes for Verifiable Delegated Quantum Computation, with Quasilinear Resources},
+    Author      =   {Coladangelo, Andrea and Grilo, Alex B and Jeffery, Stacey and Vidick, Thomas},
+    Year        =   {2019},
+    Booktitle   =   eurocrypt19,
+    Volume      =   {III},
+    Pages       =   {247--277},
+    DOI         =   {10.1007/978-3-030-17659-4\_9},
+}
+
+@Inproceedings{BSCR+19,
+    Title       =   {Aurora: Transparent succinct arguments for {R1CS}},
+    Author      =   {Ben-Sasson, Eli and Chiesa, Alessandro and Riabzev, Michael and Spooner, Nicholas and Virza, Madars and Ward, Nicholas P},
+    Year        =   {2019},
+    Booktitle   =   eurocrypt19,
+    Volume      =   {I},
+    Pages       =   {103--128},
+    DOI         =   {10.1007/978-3-030-17653-2\_4},
+}
+
+@Article{PHGR16,
+    Title       =   {Pinocchio: nearly practical verifiable computation},
+    Author      =   {Parno, Bryan and Howell, Jon and Gentry, Craig and Raykova, Mariana},
+    Year        =   {2016},
+    Journal     =   cacm,
+    Volume      =   {59},
+    Number      =   {2},
+    Pages       =   {103--112},
+    DOI         =   {10.1145/2856449},
+}
+
+@Inproceedings{GMW87,
+    Title       =   {How to play any mental game},
+    Author      =   {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+    Year        =   {1987},
+    Booktitle   =   stoc87,
+    Pages       =   {218--229},
+    DOI         =   {10.1145/28395.28420},
+}
+
+@Article{EK09,
+    Title       =   {Restrictions on transversal encoded quantum gate sets},
+    Author      =   {Eastin, Bryan and Knill, Emanuel},
+    Year        =   {2009},
+    Journal     =   phyrevl,
+    Volume      =   {102},
+    Number      =   {11},
+    Pages       =   {110502},
+    DOI         =   {10.1103/PhysRevLett.102.110502},
+}
+
+@Inproceedings{SMBW12,
+    Title       =   {Making argument systems for outsourced computation practical (sometimes).},
+    Author      =   {Setty, Srinath and McPherson, Richard and Blumberg, Andrew J and Walfish, Michael},
+    Year        =   {2012},
+    Booktitle   =   ndss2012,
+}
+% 20191029-slord: https://www.ndss-symposium.org/wp-content/uploads/2017/09/04_3.pdf
+% 20191029-slord: No DOI found for this entry.
+
+@Inproceedings{SVP+12,
+    Author     =    {Setty, Srinath and Vu, Victor and Panpalia, Nikhil and Braun, Benjamin and Blumberg, Andrew J and Walfish, Michael},
+    Title      =    {Taking Proof-Based Verified Computation a Few Steps Closer to Practicality},
+    Booktitle  =    usenixsecurity2012,
+    Year       =    {2012},
+    Pages      =    {253--268},
+}
+% 20191029-slord: https://www.usenix.org/conference/usenixsecurity12/technical-sessions/presentation/setty
+% 20191030-slord: No DOI found for this entry.
+
+@Inproceedings{Vad07,
+    Title       =   {The complexity of zero knowledge},
+    Author      =   {Vadhan, Salil},
+    Year        =   {2007},
+    Booktitle   =   fsttcs2007,
+    Pages       =   {52--70},
+    DOI         =   {10.1007/978-3-540-77050-3\_5},
+}
+
+@Inproceedings{OV07,
+    Title       =   {Zero knowledge and soundness are symmetric},
+    Author      =   {Ong, Shien Jin and Vadhan, Salil},
+    Year        =   {2007},
+    Booktitle   =   eurocrypt07,
+    Pages       =   {187--209},
+    DOI         =   {10.1007/978-3-540-72540-4\_11},
+}
+
+@Article{NPA08,
+    Title       =   {A convergent hierarchy of semidefinite programs characterizing the set of quantum correlations},
+    Author      =   {Navascu{\'e}s, Miguel and Pironio, Stefano and Ac{\'\i}n, Antonio},
+    Year        =   {2008},
+    Journal     =   njp,
+    Volume      =   {10},
+    Number      =   {7},
+    Pages       =   {073013},
+    DOI         =   {10.1088/1367-2630/10/7/073013},
+}
+
+@Inproceedings{KMO89,
+    Title       =   {Minimum resource zero knowledge proofs},
+    Author      =   {Kilian, Joe and Micali, Silvio and Ostrovsky, Rafail},
+    Year        =   {1989},
+    Booktitle   =   focs89,
+    Pages       =   {474--479},
+    DOI         =   {10.1109/SFCS.1989.63521},
+}
+
