--- a/bib/abbr.bib
+++ b/bib/abbr.bib
@@ -10,6 +10,7 @@
 @String{ cjtcs                =   {Chic. J. Theoret. Comput. Sci.}}
 @String{ cmp                  =   {Comm. Math. Phys.}}
 @String{ cacm                 =   {Comm. ACM}}
+@String{ cc                   =   {Comput. Complexity}}
 @String{ dcc                  =   {Design. Code. Cryptogr.}}
 @String{ epjd                 =   {Eur. Phys. J. D}}
 @String{ fttcs                =   {Found. Trends Theor. Comput. Sci.}}
@@ -30,6 +31,7 @@
 @String{ ijtp                 =   {Internat. J. Theoret. Phys.}}
 @String{ lmp                  =   {Lett. Math. Phys.}}
 @String{ mpcps                =   {Math. Proc. Cambridge Philos. Soc.}}
+@String{ mprog                =   {Math. Program.}}
 @String{ mata                 =   {Mat. Ann.}}
 @String{ nc                   =   {Nat. Comp.}}
 @String{ nat                  =   {Nat.}}
@@ -43,6 +45,7 @@
 @String{ phyla                =   {Phys. Lett. A}}
 @String{ pnas                 =   {PNAS}}
 @String{ prsla                =   {Proc. Roy. Soc. A}}
+@String{ q                    =   {Quant.}}
 @String{ qic                  =   {Quant. Inf. Comp.}}
 @String{ qip                  =   {Quant. Inf. Process.}}
 @String{ rmp                  =   {Rev. Mod. Phys}}
@@ -67,8 +70,10 @@
 @String{ ccc12                =   {CCC 2012}}
 @String{ ccc15                =   {CCC 2015}}
 @String{ crypto1982           =   {CRYPTO 1982}}
+@String{ crypto1983           =   {CRYPTO 1983}}
 @String{ crypto1986           =   {CRYPTO 1986}}
 @String{ crypto1987           =   {CRYPTO 1987}}
+@String{ crypto1988           =   {CRYPTO 1988}}
 @String{ crypto1990           =   {CRYPTO 1990}}
 @String{ crypto1991           =   {CRYPTO 1991}}
 @String{ crypto1992           =   {CRYPTO 1992}}
@@ -102,6 +107,7 @@
 @String{ eurocrypt01          =   {EUROCRYPT 2001}}
 @String{ eurocrypt04          =   {EUROCRYPT 2004}}
 @String{ eurocrypt06          =   {EUROCRYPT 2006}}
+@String{ eurocrypt07          =   {EUROCRYPT 2007}}
 @String{ eurocrypt10          =   {EUROCRYPT 2010}}
 @String{ eurocrypt11          =   {EUROCRYPT 2011}}
 @String{ eurocrypt12          =   {EUROCRYPT 2012}}
@@ -109,15 +115,18 @@
 @String{ eurocrypt15          =   {EUROCRYPT 2015}}
 @String{ eurocrypt17          =   {EUROCRYPT 2017}}
 @String{ eurocrypt18          =   {EUROCRYPT 2018}}
+@String{ eurocrypt19          =   {EUROCRYPT 2019}}
 @String{ focs82               =   {FOCS 1982}}
 @String{ focs84               =   {FOCS 1984}}
 @String{ focs88               =   {FOCS 1988}}
+@String{ focs89               =   {FOCS 1989}}
 @String{ focs93               =   {FOCS 1993}}
 @String{ focs94               =   {FOCS 1994}}
 @String{ focs98               =   {FOCS 1998}}
 @String{ focs00               =   {FOCS 2000}}
 @String{ focs01               =   {FOCS 2001}}
 @String{ focs02               =   {FOCS 2002}}
+@String{ focs03               =   {FOCS 2003}}
 @String{ focs05               =   {FOCS 2005}}
 @String{ focs06               =   {FOCS 2006}}
 @String{ focs09               =   {FOCS 2009}}
@@ -127,14 +136,18 @@
 @String{ focs14               =   {FOCS 2014}}
 @String{ focs16               =   {FOCS 2016}}
 @String{ focs18               =   {FOCS 2018}}
+@String{ ieeesecpriv2014      =   {2014 IEEE Symposium on Security and Privacy}}
+@String{ icalp2019            =   {ICALP 2019}}
 @String{ infocom05            =   {INFOCOM 2005}}
 @String{ infocom06            =   {INFOCOM 2006}}
 @String{ itcs12               =   {ITCS 2012}}
 @String{ itcs13               =   {ITCS 2013}}
 @String{ itcs14               =   {ITCS 2014}}
+@String{ ndss2012             =   {NDSS 2012}}
 @String{ PQCrypto13           =   {PQCrypto 2013}}
 @String{ PQCrypto14           =   {PQCrypto 2014}}
 @String{ stoc85               =   {STOC 1985}}
+@String{ stoc87               =   {STOC 1987}}
 @String{ stoc88               =   {STOC 1988}}
 @String{ stoc95               =   {STOC 1995}}
 @String{ stoc96               =   {STOC 1996}}
@@ -151,6 +164,7 @@
 @String{ stoc16               =   {STOC 2016}}
 @String{ stoc17               =   {STOC 2017}}
 @String{ stoc19               =   {STOC 2019}}
+@String{ tcc2008              =   {TCC 2008}}
 @String{ tcc2015              =   {TCC 2015}}
 @String{ tqc11                =   {TQC 2011}}
 @String{ tqc12                =   {TQC 2012}}
@@ -158,13 +172,16 @@
 @String{ tqc14                =   {TQC 2014}}
 @String{ mfcs2014             =   {MFCS 2014}}
 @String{ mfcs2017             =   {MFCS 2017}}
+@String{ mfcs2018             =   {MFCS 2018}}
 @String{ ctrsa2017            =   {CT-RSA 2017}}
 @String{ ctrsa2011            =   {CT-RSA 2011}}
 @String{ icms2018             =   {ICMS 2018}}
+@String{ usenixsecurity2012   =   {USENIX Security 2012}}
 @String{ dsnpr                =   {Dsn Prog. Rep.}}
 @String{ iccssp               =   {ICCSSP}}
 @String{ intcc                =   {Int. Conf. Comp.}}
 @String{ inffe                =   {Inf. Fors. Ent.}}
+@String{ fsttcs2007           =   {FSTTCS 2007}}
 @String{ fsttcs14             =   {FSTTCS 2014}}
 @String{ group22              =   {GROUP 22}}
 @String{ icaaim               =   {Int. Conf. Alg. Asp. Inf. Manag.}}
