--- a/bib/full.bib
+++ b/bib/full.bib
@@ -10,6 +10,7 @@
 @String{ cjtcs                =   {Chicago Journal of Theoretical Computer Science}}
 @String{ cmp                  =   {Communications in Mathematical Physics}}
 @String{ cacm                 =   {Communications of the ACM}}
+@String{ cc                   =   {Computational Complexity}}
 @String{ dcc                  =   {Designs, Codes and Cryptography}}
 @String{ epjd                 =   {European Physical Journal D}}
 @String{ fttcs                =   {Foundations and Trends in Theoretical Computer Science}}
@@ -30,6 +31,7 @@
 @String{ ijtp                 =   {International Journal of Theoretical Physics}}
 @String{ lmp                  =   {Letters in Mathematical Physics}}
 @String{ mpcps                =   {Mathematical Proceedings of the Cambridge Philosophical Society}}
+@String{ mprog                =   {Mathematical Programming}}
 @String{ mata                 =   {Mathematische Annalen}}
 @String{ nc                   =   {Natural Computing}}
 @String{ nat                  =   {Nature}}
@@ -43,6 +45,7 @@
 @String{ phyla                =   {Physics Letters A}}
 @String{ pnas                 =   {Proceedings of the National Academy of Sciences of the United States of America}}
 @String{ prsla                =   {Proceedings of the Royal Society of London A: Mathematical, Physical and Engineering Sciences}}
+@String{ q                    =   {Quantum}}
 @String{ qic                  =   {Quantum Information {\&} Computation}}
 @String{ qip                  =   {Quantum Information Processing}}
 @String{ rmp                  =   {Reviews of Modern Physics}}
@@ -67,8 +70,10 @@
 @String{ ccc12                =   {27th Annual Conference on Computational Complexity---CCC 2012}}
 @String{ ccc15                =   {30th Annual Conference on Computational Complexity---CCC 2015}}
 @String{ crypto1982           =   {Advances in Cryptology---CRYPTO 1982}}
+@String{ crypto1983           =   {Advances in Cryptology---CRYPTO 1982}}
 @String{ crypto1986           =   {Advances in Cryptology---CRYPTO 1986}}
 @String{ crypto1987           =   {Advances in Cryptology---CRYPTO 1987}}
+@String{ crypto1988           =   {Advances in Cryptology---CRYPTO 1988}}
 @String{ crypto1990           =   {Advances in Cryptology---CRYPTO 1990}}
 @String{ crypto1991           =   {Advances in Cryptology---CRYPTO 1991}}
 @String{ crypto1992           =   {Advances in Cryptology---CRYPTO 1992}}
@@ -102,6 +107,7 @@
 @String{ eurocrypt01          =   {Advances in Cryptology---EUROCRYPT 2001}}
 @String{ eurocrypt04          =   {Advances in Cryptology---EUROCRYPT 2004}}
 @String{ eurocrypt06          =   {Advances in Cryptology---EUROCRYPT 2006}}
+@String{ eurocrypt07          =   {Advances in Cryptology---EUROCRYPT 2007}}
 @String{ eurocrypt10          =   {Advances in Cryptology---EUROCRYPT 2010}}
 @String{ eurocrypt11          =   {Advances in Cryptology---EUROCRYPT 2011}}
 @String{ eurocrypt12          =   {Advances in Cryptology---EUROCRYPT 2012}}
@@ -109,15 +115,18 @@
 @String{ eurocrypt15          =   {Advances in Cryptology---EUROCRYPT 2015}}
 @String{ eurocrypt17          =   {Advances in Cryptology---EUROCRYPT 2017}}
 @String{ eurocrypt18          =   {Advances in Cryptology---EUROCRYPT 2018}}
+@String{ eurocrypt19          =   {Advances in Cryptology---EUROCRYPT 2019}}
 @String{ focs82               =   {23rd Annual Symposium on Foundations of Computer Science---FOCS 1982}}
 @String{ focs84               =   {25th Annual Symposium on Foundations of Computer Science---FOCS 1984}}
 @String{ focs88               =   {29th Annual Symposium on Foundations of Computer Science---FOCS 1988}}
+@String{ focs89               =   {30th Annual Symposium on Foundations of Computer Science---FOCS 1989}}
 @String{ focs93               =   {34th Annual Symposium on Foundations of Computer Science---FOCS 1993}}
 @String{ focs94               =   {35th Annual Symposium on Foundations of Computer Science---FOCS 1994}}
 @String{ focs98               =   {39th Annual Symposium on Foundations of Computer Science---FOCS 1998}}
 @String{ focs00               =   {41st Annual Symposium on Foundations of Computer Science---FOCS 2000}}
 @String{ focs01               =   {42nd Annual Symposium on Foundations of Computer Science---FOCS 2001}}
 @String{ focs02               =   {43rd Annual Symposium on Foundations of Computer Science---FOCS 2002}}
+@String{ focs03               =   {44th Annual Symposium on Foundations of Computer Science---FOCS 2003}}
 @String{ focs05               =   {46th Annual Symposium on Foundations of Computer Science---FOCS 2005}}
 @String{ focs06               =   {47th Annual Symposium on Foundations of Computer Science---FOCS 2006}}
 @String{ focs09               =   {50th Annual Symposium on Foundations of Computer Science---FOCS 2009}}
@@ -127,14 +136,18 @@
 @String{ focs14               =   {55th Annual Symposium on Foundations of Computer Science---FOCS 2014}}
 @String{ focs16               =   {57th Annual Symposium on Foundations of Computer Science---FOCS 2016}}
 @String{ focs18               =   {59th Annual Symposium on Foundations of Computer Science---FOCS 2018}}
+@String{ ieeesecpriv2014      =   {2014 IEEE Symposium on Security and Privacy}}
+@String{ icalp2019            =   {46th International Colloquium on Automata, Languages, and Programming---ICALP 2019}}
 @String{ infocom05            =   {24th Annual Joint Conference of the IEEE Computer and Communications Societies---INFOCOM 2005}}
 @String{ infocom06            =   {25th IEEE International Conference on Computer Communications---INFOCOM 2006}}
 @String{ itcs12               =   {3rd Conference on Innovations in Theoretical Computer Science---ITCS 2012}}
 @String{ itcs13               =   {4th Conference on Innovations in Theoretical Computer Science---ITCS 2013}}
 @String{ itcs14               =   {5th Conference on Innovations in Theoretical Computer Science---ITCS 2014}}
+@String{ ndss2012             =   {19th Annual Network and Distributed System Security Symposium---NDSS 2012}}
 @String{ PQCrypto13           =   {Post-Quantum Cryptography---PQCrypto 2013}}
 @String{ PQCrypto14           =   {Post-Quantum Cryptography---PQCrypto 2014}}
 @String{ stoc85               =   {17th Annual ACM Symposium on Theory of Computing---STOC 1985}}
+@String{ stoc87               =   {19th Annual ACM Symposium on Theory of Computing---STOC 1987}}
 @String{ stoc88               =   {20th Annual ACM Symposium on Theory of Computing---STOC 1988}}
 @String{ stoc95               =   {27th Annual ACM Symposium on Theory of Computing---STOC 1995}}
 @String{ stoc96               =   {28th Annual ACM Symposium on Theory of Computing---STOC 1996}}
@@ -151,6 +164,7 @@
 @String{ stoc16               =   {48th Annual ACM Symposium on Theory of Computing---STOC 2016}}
 @String{ stoc17               =   {49th Annual ACM Symposium on Theory of Computing---STOC 2017}}
 @String{ stoc19               =   {51st Annual ACM Symposium on Theory of Computing---STOC 2019}}
+@String{ tcc2008              =   {5th Theory of Cryptography Conference---TCC 2008}}
 @String{ tcc2015              =   {12th Theory of Cryptography Conference---TCC 2015}}
 @String{ tqc11                =   {6th Conference on the Theory of Quantum Computation, Communication, and Cryptography---TQC 2011}}
 @String{ tqc12                =   {7th Conference Theory of Quantum Computation, Communication, and Cryptography---TQC 2012}}
@@ -158,13 +172,16 @@
 @String{ tqc14                =   {9th Conference on the Theory of Quantum Computation, Communication and Cryptography---TQC 2014}}
 @String{ mfcs2014             =   {39th International Symposium on Mathematical Foundations of Computer Science---MFCS 2014}}
 @String{ mfcs2017             =   {42nd International Symposium on Mathematical Foundations of Computer Science---MFCS 2017}}
+@String{ mfcs2018             =   {43rd International Symposium on Mathematical Foundations of Computer Science---MFCS 2018}}
 @String{ ctrsa2017            =   {Cryptographer's Track at the RSA Conference---CT-RSA 2017}}
 @String{ ctrsa2011            =   {Cryptographer's Track at the RSA Conference---CT-RSA 2011}}
-@String{ icms2018             =   {6th International Conference on Mathematical Software --- ICMS 2018}}
+@String{ icms2018             =   {6th International Conference on Mathematical Software---ICMS 2018}}
+@String{ usenixsecurity2012   =   {21st USENIX Security Symposium---USENIX Security 2012}}
 @String{ dsnpr                =   {DSN progress report}}
 @String{ iccssp               =   {International Conference on Computers, Systems and Signal Processing}}
 @String{ intcc                =   {International Conference on Computers}}
 @String{ inffe                =   {Informatik- Forschung und Entwicklung}}
+@String{ fsttcs2007           =   {27th International Conference on Foundation of Software Technology and Theoretical Computer Science---FSTTCS 2007}}
 @String{ fsttcs14             =   {34th international Conference on Foundation of Software Technology and Theoretical Computer Science---FSTTCS 2014}}
 @String{ group22              =   {22nd International Colloquium on Group Theoretical Methods in Physics---GROUP 22}}
 @String{ icaaim               =   {10th International Conference on Algorithmic Aspects in Information and Management}}
