--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,15 @@
 \section{Introduction}
 
-Indistinguishability obfuscation ($i\mathcal{O}$) was first proposed by Barak, Goldreich, Impagliazzo, Rudich, Sahai, Vadhan and Yang~\cite{BGI+12}. Among other things, it has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{correction function}) and the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base contruction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states. ({\color {red} Anne need to fill in})
+\anote{start more smoothly. What is iO, how did it come about, why do we care, what is the state-of-the-art? Also, mention somewhere that a canonical form is an iO}
+Indistinguishability obfuscation ($i\mathcal{O}$) was first proposed by Barak, Goldreich, Impagliazzo, Rudich, Sahai, Vadhan and Yang~\cite{BGI+12}. Among other things, it has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc.   Add more stuff. 
+
+
+\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}. }
+
+
+
+In this work, we continue the study of computational indistinguishable obfuscation in the quantum world.
+The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{correction function}) and the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base contruction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states. 
 
 %In this work, we continue the study of $i\mathcal{O}$ in the quantum world. We give two main contributions, both assuming the existence of quantum-secure $q\mathcal{O}$ for classical circuits.
 %Our first contribution echoes the private-to-public key transformation of~\cite{SW14}, by showing its applicability to the encryption of \emph{quantum} messages. In this case, the security is based on (quantum-secure one-way functions?)..., and is shown according to the notion of quantum semantic security ~\cite{BJ15,ABF+16}. Our second contribution shows how to build $i\mathcal{O}$ for certain families of quantum circuits. Namely, we show two different ways in which Clifford circuits admit an $i\mathcal{O}$ scheme. The first method is based on the canonical representation of Clifford circuits~\cite{AG04,Nest10}, while the second method is based on the principle of gate teleportation~\cite{GC99}. We  extend these schemes to circuits that include layers of non-Clifford $\tgate$-gates, as long as each Clifford layer is within a family of circuits that admit the $i\mathcal{O}$ obfuscation described above, and as long as the $\tgate$-gates are in fixed positions.
@@ -8,11 +17,11 @@ Indistinguishability obfuscation ($i\mathcal{O}$) was first proposed by Barak, G
 
 %\Anne{note to Raza: when adding bib entries to quantum.bib, just add a quick entry at the bottom of quantum.bib. Then Sebastien will clean it up and send us the corrected .bib (Sébastien has a small contract as admin of the quantum.bib).}
 
-\subsection{Related Work}
-The quantum obfuscation was first studied in \cite{}, where a new notion called  
-$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{}. However, $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{}, which is the topic of this paper. 
+\subsection{Obfuscation in a Quantum World}
+The quantum obfuscation was first studied in \cite{}\anote{what is this reference}, where a new notion called
+$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{}. However, $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{}, which is the topic of this paper.
 
-The quantum obfuscation is studied more rigorously in \cite{}, where the following notions of quantum obfuscation are defined.
+The quantum obfuscation is studied more rigorously in \cite{AF16arxiv}, where the following notions of quantum obfuscation are defined.
 \begin{enumerate}
 \item Quantum black-box obfuscation.
 \item Quantum information-theoretic black-box obfuscation.
@@ -20,9 +29,12 @@ The quantum obfuscation is studied more rigorously in \cite{}, where the followi
 \item Quantum Best-Possible obfuscation (perfect, statistical, computational).
 \end{enumerate}
 
- The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA \cite{}. 
- 
- In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aronson and Gottesman ~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. However, the canonical form was not guaranteed to be unique, so we slightly modified their algorithm so that it always outputs a unique canonical form for any Clifford circuit. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{correction function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$ gates are in $O(\log(n)).$ 
+ The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA \cite{}.
+
+
+\subsection{Our Results}
+
+ In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aronson and Gottesman ~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. However, the canonical form was not guaranteed to be unique, so we slightly modified their algorithm so that it always outputs a unique canonical form for any Clifford circuit. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{correction function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$ gates are in $O(\log(n)).$
 
 
 
@@ -42,3 +54,23 @@ The quantum obfuscation is studied more rigorously in \cite{}, where the followi
 
 \Anne{Is there an advantage in using quantum states to obfuscate programs? I would suspect that one big advantage would be unclonable programs (they cannot be copied). Is this too ambitious to look at?  What does it even mean to have unclonable programs? (this links with work that I am currently doing with Sébastien Lord, a PhD student).}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Section applications
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Applications}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Section Conclusion and Open Problems
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Conclusion and Open Questions}
+
+The main open questions related to this work are:
+
+$i\mathcal{O}$ obfuscation for general quantum circuits
+
+applications of gate-teleportation based quantum $i\mathcal{O}$ (for instance, to unclonable programs~\cite{Aar09}). 
+
+
+\subsection*{Outline}
+\anote{In Section~ blah blah blah.}
